<resources>
    <string name="app_name">groceryLIST</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_pantry">My Pantry</string>
    <string name="title_activity_grocery_list">My Grocery List</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_recipes">Something to Eat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="i_need_new_account">I NEED NEW ACCOUNT</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_to_grocerylist">Welcome to groceryLIST</string>
    <string name="pantry">Pantry</string>
    <string name="grocerylist">groceryLIST</string>
    <string name="recipes">Recipes</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="id">ID</string>
    <string name="food_name">Food Name</string>

    <!-- Strings related to GroceryList -->
    <string name="item_entry">Please enter an item.</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="spoonacular_attribution">Spoonacular for access to their API to power our application.</string>
    <string name="i_cons_attribution">i cons, US for the settings button icon</string>
    <string name="suib_icon_attribution">suib icon for the recipe button icon</string>
    <string name="adrien_coquet_attribution">Adrien Coquet, FR for the cart button icon</string>
    <string name="star_and_anchor_design_attribution">Star and Anchor Design for the pantry button icon</string>
    <string name="special_thanks_to">Special Thanks To:</string>
</resources>
