<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:foregroundGravity="bottom"
    tools:context="edu.utexas.ece.pugs.grocerylist.SettingsActivity">


    <TextView
        android:id="@+id/spoonacular_attribution_textview"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/spoonacular_attribution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/i_cons_attribution_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:text="@string/i_cons_attribution"
        app:layout_constraintStart_toStartOf="@+id/spoonacular_attribution_textview"
        app:layout_constraintTop_toBottomOf="@+id/spoonacular_attribution_textview" />

    <TextView
        android:id="@+id/suib_icon_attribution_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/suib_icon_attribution"
        app:layout_constraintStart_toStartOf="@+id/i_cons_attribution_textview"
        app:layout_constraintTop_toBottomOf="@+id/i_cons_attribution_textview" />

    <TextView
        android:id="@+id/adrien_coquet_attribution_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adrien_coquet_attribution"
        app:layout_constraintStart_toStartOf="@+id/suib_icon_attribution_textview"
        app:layout_constraintTop_toBottomOf="@+id/suib_icon_attribution_textview" />

    <TextView
        android:id="@+id/star_and_anchor_design_attribution_textview"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="12dp"
        android:text="@string/star_and_anchor_design_attribution"
        app:layout_constraintStart_toStartOf="@+id/adrien_coquet_attribution_textview"
        app:layout_constraintTop_toBottomOf="@+id/adrien_coquet_attribution_textview" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/special_thanks_to"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/star_and_anchor_design_attribution_textview"
        app:srcCompat="@drawable/ic_pantry" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/suib_icon_attribution_textview"
        app:srcCompat="@drawable/ic_recipe" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        app:layout_constraintStart_toEndOf="@+id/i_cons_attribution_textview"
        app:layout_constraintTop_toTopOf="@+id/i_cons_attribution_textview"
        app:srcCompat="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/adrien_coquet_attribution_textview"
        app:srcCompat="@drawable/ic_cart" />


    <Button
        android:id="@+id/settings_sign_out_btn"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="180dp"
        android:background="?attr/colorError"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star_and_anchor_design_attribution_textview"
        app:layout_constraintVertical_bias="0.919" />

</android.support.constraint.ConstraintLayout>
