<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.utexas.ece.pugs.grocerylist.AddToPantryActivity">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/id_edit_text"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        app:layout_constraintVertical_bias="0.134">

    </EditText>

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_edit_text">

    </EditText>

    <EditText
        android:id="@+id/unit_edit_text"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_edit_text">

    </EditText>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/food_name"
        app:layout_constraintBottom_toTopOf="@+id/name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/name_edit_text" />

    <TextView
        android:id="@+id/id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@+id/id_edit_text"
        app:layout_constraintStart_toStartOf="@+id/id_edit_text" />

    <TextView
        android:id="@+id/amount_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/amount"
        app:layout_constraintBottom_toTopOf="@+id/amount_edit_text"
        app:layout_constraintStart_toStartOf="@+id/amount_edit_text" />

    <TextView
        android:id="@+id/unit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/unit"
        app:layout_constraintBottom_toTopOf="@+id/unit_edit_text"
        app:layout_constraintStart_toStartOf="@+id/unit_edit_text" />

    <Button
        android:id="@+id/add_to_firebase_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Add To Firebase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unit_edit_text" />

</android.support.constraint.ConstraintLayout>

